      Implemented by "Richard Foley" <richard.foley@rfi.net>
      [rt.cpan.org 15654]
    * Added test_pass() to Test::Builder::Tester rather than having to
      call test_out("ok 1 - foo"). <chromatic@wgz.org> [rt.cpan.org 11317]
    * test_fail() now accepts a test diagnostic rather than having to
      call test_out() separately. <chromatic@wgz.org> [rt.cpan.org 11319]
    - isnt_num() doc example wrongly showed is_num(). <chromatic@wgz.org>
    - Fixed a minor typo in the BAIL_OUT() docs. <Jeff Deifik>

0.62  Sat Oct  8 01:25:03 PDT 2005
    * Absorbed Test::Builder::Tester.  The last release broke it because its
      screen scraping Test::More and the failure output changed.  By
      distributing them together we ensure TBT won't break again.
    * Test::Builder->BAILOUT() was missing.
    - is_deeply() can now handle function and code refs in a very limited
      way.  It simply looks to see if they have the same referent.
      [rt.cpan.org 14746]

0.61  Fri Sep 23 23:26:05 PDT 2005
    - create.t was trying to read from a file before it had been closed
      (and thus the changes may not have yet been written).
    * is_deeply() would call stringification methods on non-object strings
      which happened to be the name of a string overloaded class.
      [rt.cpan.org 14675]

0.60_02  Tue Aug  9 00:27:41 PDT 2005
    * Added Test::Builder::Module.
    - Changed Test::More and Test::Simple to use Test::Builder::Module
    - Minor Win32 testing nit in fail-more.t
    * Added no_diag() method to Test::Builder and changed Test::More's
      no_diag internals to use that. [rt.cpan.org 8655]
    * Deprecated no_diag() as an option to "use Test::More".  Call the
      Test::Builder method instead.

0.60_01  Sun Jul  3 18:11:58 PDT 2005
    - Moved the docs around a little to better group all the testing
      functions together. [rt.cpan.org 8388]
    * Added a BAIL_OUT() function to Test::More [rt.cpan.org 8381]